k8s/base/app2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app2
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
