k8s/base/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - name: http
      port: 8080
      targetPort: http
